--- a/style.css
+++ b/style.css
@@ -14,8 +14,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    background-color: black;
 }
 
-#cell{
+.cell{
     border-radius: 5px;
+    transition-duration: 100ms;
+}
+.cell:hover{
+    transform: translateY(-2px);
+    
 }
