--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 .cell{
     border-radius: 5px;
     transition-duration: 100ms;
+    background-color: burlywood;
 }
 .cell:hover{
     transform: translateY(-2px);
