--- a/style.css
+++ b/style.css
@@ -18,11 +18,23 @@
 }
 
 .cell{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    vertical-align: middle;
+    
+
+    justify-content: space-evenly;
     border-radius: 5px;
     transition-duration: 100ms;
     background-color: burlywood;
 }
 .cell:hover{
     transform: translateY(-2px);
+    
+}
+.pencil-digit{
+    margin-top: -2px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     
 }
