Added permanent cells+ Give each square a unique id

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     padding-top: 3px;
 }
 
-#square{
+.square{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -35,6 +35,9 @@ body{
     background-color: whitesmoke;
     
 }
+.permanent{
+    color: red;
+}
 .cell:hover{
     transform: translateY(-2px);
     
@@ -44,7 +47,7 @@ body{
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .pencil-digit{
-    
+    color: black;
     margin-top: -2px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     
