--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body{
     transition-duration: 100ms;
     
     background-color: whitesmoke;
+
+    
     
 }
 .permanent{
@@ -60,4 +62,8 @@ body{
 
     font-family:Verdana, sans-serif;
     font-size: 30px;
+}
+
+.active-cell{
+    background-color: aquamarine;
 }
