--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body{
-    background-color: whitesmoke;
+    background-color: #1E1E1E;
+    color: white;
 }
-
+.canvas{
+    position: absolute;
+    padding-right: 8px;
+}
 #game-board{
     position: relative;
     
     justify-content: space-evenly;
-
+    padding: 3px;
+    padding-top: 7px;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
-    border: 2px solid;
+    background-color: #3C3C3C;
     border-radius: 10px;
-    padding-top: 3px;
 }
 
 .square{
@@ -29,24 +32,28 @@ body{
     user-select: none;
 
     justify-content: space-evenly;
-    border-radius: 5px;
-    transition-duration: 100ms;
-    
-    background-color: whitesmoke;
+    border-radius: 4px;
+    transition-duration: 150ms;
+    color: #808080;
+    background-color: #1E1E1E;
+
+    box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.75);
 
     
     
 }
 .permanent{
-    color: red;
+    color: whitesmoke;
 }
 .cell:hover{
     transform: translateY(-2px);
+    border-radius: 8px;
+    
     
     
 }
 .cell:active{
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
 }
 .pencil-digit{
     color: black;
@@ -56,18 +63,15 @@ body{
 }
 .value{
     position: absolute;
-    
     padding-top: 5px;
-    
-
     font-family:Verdana, sans-serif;
     font-size: 30px;
 }
 
 .active-cell{
-    background-color: aquamarine;
+    background-color: #142256;
 }
 
 .highlight-cell{
-    background-color: aqua;
+    background-color: #1D212C;
 }
