--- a/style.css
+++ b/style.css
@@ -1,21 +1,61 @@
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 body{
     background-color: #1E1E1E;
     color: white;
+    font-family: 'Inter', sans-serif;
+    margin: 0px;
+    
 }
 .canvas{
-    position: absolute;
-    padding-right: 8px;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    
+    
+    
+}
+.play-area{
+    display: grid;
+    width: 100%;
+    min-width: 500px;
+    justify-content:center;
+    align-items: center;
+}
+.game-area{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: fit-content;
+    justify-content:center;
+    
 }
 #game-board{
     position: relative;
-    
     justify-content: space-evenly;
     padding: 3px;
     padding-top: 7px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     background-color: #3C3C3C;
     border-radius: 10px;
+}
+#input-menu{
+    display: flex;
+    flex-wrap: wrap;
+    width: 400px;
+    min-width: 400px;
+    justify-content: center;
+}
+
+.numbers-keyboard{
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: center;
 }
 
 .square{
@@ -30,11 +70,12 @@ body{
     flex-wrap: wrap;
     text-align: center;
     user-select: none;
+    
 
     justify-content: space-evenly;
     border-radius: 4px;
     transition-duration: 150ms;
-    color: #808080;
+    color: #858578;
     background-color: #1E1E1E;
 
     box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.75);
@@ -47,25 +88,20 @@ body{
 }
 .cell:hover{
     transform: translateY(-2px);
-    border-radius: 8px;
-    
-    
-    
+    border-radius: 8px; 
 }
 .cell:active{
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
 }
 .pencil-digit{
     color: black;
-    margin-top: -2px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    
+    margin-top: -2px;    
 }
 .value{
     position: absolute;
     padding-top: 5px;
-    font-family:Verdana, sans-serif;
     font-size: 30px;
+    font-weight: 450;
 }
 
 .active-cell{
@@ -74,4 +110,135 @@ body{
 
 .highlight-cell{
     background-color: #1D212C;
+}
+
+.number-btn{
+    width: 70px;
+    height: 70px;
+    background: #1E1E1E;
+    border: 4px solid #252526;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+    color: #858578;
+    transition-duration: 150ms;
+}
+.number-btn:hover{
+    
+    border-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+}
+.number-btn:active{
+    
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+.tools-keyboard{
+    padding-top: 15px;
+}
+
+.tool-btn{
+    width: 100px;
+    height: 80px;
+    border-radius: 20px;
+    margin: 5px;
+    
+    background: #1E1E1E;
+    border: 4px solid #252526;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.tool-btn:hover{
+    
+    border-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+}
+.tool-btn:active{
+    
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+#tool-btn-pencil{
+    background-image: url("./Vectors/pencilSVG.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+}
+
+#tool-btn-pencil-selected{
+    
+    border: 4px solid #3A4075;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    background-image: url("./Vectors/pencilSelectedSVG.svg");
+}
+
+#tool-btn-undo{
+    background-image: url("./Vectors/UndoSVG.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+}
+
+#tool-btn-backspace{
+    background-image: url("./Vectors/BackspaceSVG.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    
+}
+
+.config-area{
+    right: 0px;
+    min-width: 300px;
+    width: 700px;
+    height: fill;
+    background: #252526;
+    box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+@media only screen and (orientation: portrait) {
+    .canvas{
+        display: flex;
+        flex-wrap: wrap;
+        width: fit-content;
+        left: 0px;
+        top: 0px;
+        position: relative;
+        
+
+    }
+    .game-area{
+        
+        min-width: 400px;
+        
+    }
+    .play-area{
+        display: grid;
+        width: 100%;
+        min-width: 300px;
+        justify-content:center;
+        align-items: center;
+    }
+    #input-menu{
+        display: flex;
+        flex-wrap: wrap;
+        width: 400px;
+        min-width: 300px;
+        justify-content: center;
+    }
+    .config-area{
+        width: 100%;
+        height: fit-content;
+        background: #252526;
+        box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.25);
+    }
+
 }
