--- a/style.css
+++ b/style.css
@@ -4,9 +4,47 @@ html { font-family: 'Inter', sans-serif; }
   html { font-family: 'Inter var', sans-serif; }
 }
 
+
+:root{
+    --background-color: #1E1E1E;
+    --game-border-color:  #3C3C3C;
+    --value-color: #858578;
+    --cell-highlight-color: #142256;
+    --backgroung-highlight-color: #1D212C;
+    --permanent-value-color: whitesmoke;
+    --number-btn-border-color: #252526;
+    --config-area-color: #252526;
+    --pencil-color: #858578;
+
+}
+
+[data-theme="dark"] {
+    --background-color: #1E1E1E;
+    --game-border-color:  #3C3C3C;
+    --value-color: #858578;
+    --cell-highlight-color: #142256;
+    --backgroung-highlight-color: #1D212C;
+    --permanent-value-color: whitesmoke;
+    --number-btn-border-color: #252526;
+    --config-area-color: #252526;
+    --pencil-color: #858578;
+}
+[data-theme="light"] {
+    --background-color: white;
+    --game-border-color:  #313131;
+    --value-color: #858578;
+    --cell-highlight-color: #AFC0FF;
+    --backgroung-highlight-color: #E2E9FF;
+    --permanent-value-color: black;
+    --number-btn-border-color: #252526;
+    --config-area-color: #ECF1FF;
+    --pencil-color: #343434;
+}
+
+
 body{
-    background-color: #1E1E1E;
-    color: white;
+    background-color: var(--background-color);
+    color: var(--permanent-value-color);
     font-family: 'Inter', sans-serif;
     margin: 0px;
     
@@ -41,7 +79,7 @@ body{
     margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
-    background-color: #3C3C3C;
+    background-color: var(--game-border-color);
     border-radius: 10px;
 }
 #input-menu{
@@ -74,18 +112,18 @@ body{
 
     justify-content: space-evenly;
     border-radius: 4px;
-    transition-duration: 75ms;
     
-    color: #858578;
-    background-color: #1E1E1E;
+    color: var(--value-color);
+    background-color: var(--background-color);
     
-    box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.75);
+    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.5);
 
     
     
 }
 .permanent{
-    color: whitesmoke;
+    color: var(--permanent-value-color);
+    font-weight: 600;
 }
 .cell:hover{
     transform: translateY(-2px);
@@ -96,8 +134,8 @@ body{
 }
 .pencil-digit{
     
-    color: #858578;
-    font-weight: 400;
+    color: var(--pencil-color);
+    font-weight: 500;
     margin-top: -1px;   
     font-size: 12px; 
 }
@@ -109,25 +147,27 @@ body{
 }
 
 .active-cell{
-    background-color: #142256;
+    background-color: var(--cell-highlight-color);
 }
 
 .highlight-cell{
-    background-color: #1D212C;
+    background-color: var(--backgroung-highlight-color);
 }
 
+/*
 .highlight-number{
     color: blue;
 }
+*/
 
 .number-btn{
     cursor: pointer;
 
     width: 70px;
     height: 70px;
-    background: #1E1E1E;
-    border: 4px solid #252526;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(0, 0, 0, 0.5);
+    background: var(--background-color);
+    border: 4px solid var(--number-btn-border-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 2px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     margin-top: 10px;
     margin-left: 5px;
@@ -137,17 +177,17 @@ body{
     font-size: 36px;
     line-height: 44px;
     /* identical to box height */
-    color: #858578;
+    color: var(--value-color);
     transition-duration: 150ms;
 }
 .number-btn:hover{
     
     border-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 .number-btn:active{
     
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 1);
 }
 
 .tools-keyboard{
@@ -161,18 +201,18 @@ body{
     border-radius: 20px;
     margin: 5px;
     
-    background: #1E1E1E;
-    border: 4px solid #252526;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(0, 0, 0, 0.5);
+    background: var(--background-color);
+    border: 4px solid var(--number-btn-border-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .tool-btn:hover{
     
     border-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 .tool-btn:active{
     
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 1);
 }
 
 #tool-btn-pencil{
@@ -211,7 +251,7 @@ body{
     min-width: 300px;
     width: 700px;
     height: fill;
-    background: #252526;
+    background: var(--config-area-color);
     box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -248,7 +288,7 @@ body{
     .config-area{
         width: 100%;
         height: fit-content;
-        background: #252526;
+        background: var(--config-area-color);
         box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.25);
     }
 
