Generation algorithm + Started working on the generation algorithm and some changes to style

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html { font-family: 'Inter', sans-serif; }
     --background-color: #1E1E1E;
     --game-border-color:  #3C3C3C;
     --value-color: #858578;
-    --cell-highlight-color: #142256;
-    --backgroung-highlight-color: #1D212C;
+    --cell-highlight-color: #144a56;
+    --backgroung-highlight-color: #182445;
     --permanent-value-color: whitesmoke;
     --number-btn-border-color: #252526;
     --config-area-color: #252526;
@@ -22,8 +22,8 @@ html { font-family: 'Inter', sans-serif; }
     --background-color: #1E1E1E;
     --game-border-color:  #3C3C3C;
     --value-color: #858578;
-    --cell-highlight-color: #142256;
-    --backgroung-highlight-color: #1D212C;
+    --cell-highlight-color: #144a56;
+    --backgroung-highlight-color: #182445;
     --permanent-value-color: whitesmoke;
     --number-btn-border-color: #252526;
     --config-area-color: #252526;
